--- a/index.html
+++ b/index.html
@@ -32,95 +32,95 @@
     <h2>Fonts</h2>
     <ul id="fonts">
       <li>
-        <div class="col1"><strong>Font: At King</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-king">Font deails</a></div>
+        <div class="col1"><strong>Font: At King</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-king">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-king"><img src="assets/AtKing.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Slam Cnd</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-slam-cnd">Font deails</a></div>
+        <div class="col1"><strong>Font: At Slam Cnd</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-slam-cnd">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-slam-cnd"><img src="assets/AtSlamCnd.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Geodesic</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-geodesic">Font deails</a></div>
+        <div class="col1"><strong>Font: At Geodesic</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-geodesic">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-geodesic"><img src="assets/AtGeodesic.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Amiga</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-amiga">Font deails</a></div>
+        <div class="col1"><strong>Font: At Amiga</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-amiga">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-amiga"><img src="assets/AtAmiga.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Aero</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-aero">Font deails</a></div>
+        <div class="col1"><strong>Font: At Aero</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-aero">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-aero"><img src="assets/AtAero.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Slam XCnd</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xcnd">Font deails</a></div>
+        <div class="col1"><strong>Font: At Slam XCnd</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xcnd">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-slam-xcnd"><img src="assets/AtSlamXCnd.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Slam XXCnd</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xxcnd">Font deails</a></div>
+        <div class="col1"><strong>Font: At Slam XXCnd</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xxcnd">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-slam-xxcnd"><img src="assets/AtSlamXXCnd.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Slam XXXCnd</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xxxcnd">Font deails</a></div>
+        <div class="col1"><strong>Font: At Slam XXXCnd</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xxxcnd">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-slam-xxxcnd"><img src="assets/AtSlamXXXCnd.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Haüss</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-hauss">Font deails</a></div>
+        <div class="col1"><strong>Font: At Haüss</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-hauss">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-hauss"><img src="assets/AtHauss.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Haüss Mono</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-hauss-mono">Font deails</a></div>
+        <div class="col1"><strong>Font: At Haüss Mono</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-hauss-mono">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-hauss-mono"><img src="assets/AtHaussMono.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Rosa</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging">Font deails</a></div>
+        <div class="col1"><strong>Font: FS Rosa</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging">Font details</a></div>
         <div class="col2"><a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging"><img src="assets/FSRosa.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Renaissance</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging">Font deails</a></div>
+        <div class="col1"><strong>Font: FS Renaissance</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging">Font details</a></div>
         <div class="col2"><a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging"><img src="assets/FSRenaissance.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: SC Bunbury</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging">Font deails</a></div>
+        <div class="col1"><strong>Font: SC Bunbury</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging">Font details</a></div>
         <div class="col2"><a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging"><img src="assets/SCBunbury.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: SC Duncan</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: Unreleased</a></div>
+        <div class="col1"><strong>Font: SC Duncan</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Info: Unreleased</a></div>
         <div class="col2"><img src="assets/SCDuncan.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: SC Mogal</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: Unreleased</a></div>
+        <div class="col1"><strong>Font: SC Mogal</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Info: Unreleased</a></div>
         <div class="col2"><img src="assets/SCMogal.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: SC Yorkton</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: Unreleased</a></div>
+        <div class="col1"><strong>Font: SC Yorkton</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Info: Unreleased</a></div>
         <div class="col2"><img src="assets/SCYorkton.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Charity</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith">Font deails</a></div>
+        <div class="col1"><strong>Font: FS Charity</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith">Font details</a></div>
         <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith"><img src="assets/FSCharity.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Berwick</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith">Font deails</a></div>
+        <div class="col1"><strong>Font: FS Berwick</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith">Font details</a></div>
         <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith"><img src="assets/FSBerwick.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Cattle</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith">Font deails</a></div>
+        <div class="col1"><strong>Font: FS Cattle</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith">Font details</a></div>
         <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith"><img src="assets/FSCattle.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Neruda</strong><br>Foundry: Fontsmith<br>Date: 2018<br>Link: <a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith">Font deails</a></div>
+        <div class="col1"><strong>Font: FS Neruda</strong><br>Foundry: Fontsmith<br>Date: 2018<br>Link: <a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith">Font details</a></div>
         <div class="col2"><a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith"><img src="assets/FSNeruda.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: Rock & Roll</strong><br>Foundry: pedroarilla<br>Date: 2017<br>Link: Unavailable</div>
+        <div class="col1"><strong>Font: Rock & Roll</strong><br>Foundry: pedroarilla<br>Date: 2017<br>Info: Unavailable</div>
         <div class="col2"><img src="assets/RockRoll.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: Mestre</strong><br>Foundry: pedroarilla<br>Date: 2016<br>Link: Unavailable</div>
+        <div class="col1"><strong>Font: Mestre</strong><br>Foundry: pedroarilla<br>Date: 2016<br>Info: Unavailable</div>
         <div class="col2"><img src="assets/Mestre.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: Valentina</strong><br>Foundry: pedroarilla<br>Date: 2012<br>Link: Unavailable</div>
+        <div class="col1"><strong>Font: Valentina</strong><br>Foundry: pedroarilla<br>Date: 2012<br>Info: Unavailable</div>
         <div class="col2"><img src="assets/Valentina.svg"></div>
       </li>
     </ul>
