--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <div class="col2"><a href="https://arillatype.studio/font/at-amiga"><img src="assets/AtAmiga.svg"></a></div>
       </li>
       <li>
+        <div class="col1"><strong>Client: RTL Group</strong><br>Foundry: Arillatype + Atipo<br>Date: 2022<br>Link: <a href="https://arillatype.studio/rtl-group-font-expansion">Case-study</a></div>
+        <div class="col2"><a href="https://arillatype.studio/rtl-group-font-expansion"><img src="assets/RTLUnited.svg"></a></div>
+      </li>
+      <li>
         <div class="col1"><strong>Font: At Aero</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-aero">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-aero"><img src="assets/AtAero.svg"></a></div>
       </li>
@@ -72,16 +76,40 @@
         <div class="col2"><a href="https://arillatype.studio/font/at-hauss-mono"><img src="assets/AtHaussMono.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Rosa</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging"><img src="assets/FSRosa.svg"></a></div>
+        <div class="col1"><strong>Client: Estudiantes</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/movistar-estudiantes-custom-typeface">Case-study</a></div>
+        <div class="col2"><a href="https://arillatype.studio/movistar-estudiantes-custom-typeface"><img src="assets/EstudiantesSlam.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Renaissance</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging"><img src="assets/FSRenaissance.svg"></a></div>
+        <div class="col1"><strong>Client: Busup</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/busup-custom-typeface">Case-study</a></div>
+        <div class="col2"><a href="https://arillatype.studio/busup-custom-typeface"><img src="assets/BusupSans.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: SC Bunbury</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging"><img src="assets/SCBunbury.svg"></a></div>
+        <div class="col1"><strong>Client: Twenix</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/twenix-custom-typeface">Case-study</a></div>
+        <div class="col2"><a href="https://arillatype.studio/twenix-custom-typeface"><img src="assets/TwenixSans.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: EASD València</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/easd-valencia-custom-typeface">Case-study</a></div>
+        <div class="col2"><a href="https://arillatype.studio/easd-valencia-custom-typeface"><img src="assets/EscolaSans.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Forty Creek</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/forty-creek-custom-typeface">Case-study</a></div>
+        <div class="col2"><a href="https://arillatype.studio/forty-creek-custom-typeface"><img src="assets/Niagara.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Ibercaja</strong><br>Foundry: Monotype<br>Date: 2020<br>Case-study: Unavailable</div>
+        <div class="col2"><img src="assets/IbercajaSans.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Font: FS Rosa</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging?rfsn=6624833.a9c515">Font details</a></div>
+        <div class="col2"><a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging?rfsn=6624833.a9c515"><img src="assets/FSRosa.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Font: FS Renaissance</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging?rfsn=6624833.a9c515">Font details</a></div>
+        <div class="col2"><a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging?rfsn=6624833.a9c515"><img src="assets/FSRenaissance.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Font: SC Bunbury</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging?rfsn=6624833.a9c515">Font details</a></div>
+        <div class="col2"><a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging?rfsn=6624833.a9c515"><img src="assets/SCBunbury.svg"></a></div>
       </li>
       <li>
         <div class="col1"><strong>Font: SC Duncan</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Info: Unreleased</a></div>
@@ -96,20 +124,20 @@
         <div class="col2"><img src="assets/SCYorkton.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Charity</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith"><img src="assets/FSCharity.svg"></a></div>
+        <div class="col1"><strong>Font: FS Charity</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515">Font details</a></div>
+        <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSCharity.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Berwick</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith"><img src="assets/FSBerwick.svg"></a></div>
+        <div class="col1"><strong>Font: FS Berwick</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515">Font details</a></div>
+        <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSBerwick.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Cattle</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith"><img src="assets/FSCattle.svg"></a></div>
+        <div class="col1"><strong>Font: FS Cattle</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515">Font details</a></div>
+        <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSCattle.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Neruda</strong><br>Foundry: Fontsmith<br>Date: 2018<br>Link: <a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith"><img src="assets/FSNeruda.svg"></a></div>
+        <div class="col1"><strong>Font: FS Neruda</strong><br>Foundry: Fontsmith<br>Date: 2018<br>Link: <a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith?rfsn=6624833.a9c515">Font details</a></div>
+        <div class="col2"><a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSNeruda.svg"></a></div>
       </li>
       <li>
         <div class="col1"><strong>Font: Rock & Roll</strong><br>Foundry: pedroarilla<br>Date: 2017<br>Info: Unavailable</div>
