--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
       <ul>
         <li>🥸 <em><strong>101 historias NBA</em></strong> de Gonzalo Vázquez</li>
         <li>🥸 <em><strong>13 Rue del Percebe: Edición integral</em></strong> de Franciso Ibáñez</li>
+        <li>❤️ <em><strong>Memorias de un dibujante en pijama: El integral</em></strong> de Paco Roca</li>
         <li>✅ <em><strong>Los secretos de las Tierras Intermedias</em></strong> de Adrián Suárez</li>
         <li>❤️ <em><strong>Blanco inmaculado</em></strong> de Noelia Lorenzo</li>
         <li>⏹️ <em><strong>Slam Dunk</em></strong> de Takehiko Inoue</li>
