--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
       <ul>
         <li>🥸 <em><strong>101 historias NBA</em></strong> de Gonzalo Vázquez</li>
         <li>🥸 <em><strong>13 Rue del Percebe: Edición integral</em></strong> de Franciso Ibáñez</li>
+        <li>🥸 <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
+        <li>♻️ <em><strong>Mamá come sano</em></strong> de Julio Basulto</li>
         <li>❤️ <em><strong>Memorias de un dibujante en pijama: El integral</em></strong> de Paco Roca</li>
         <li>✅ <em><strong>Los secretos de las Tierras Intermedias</em></strong> de Adrián Suárez</li>
         <li>❤️ <em><strong>Blanco inmaculado</em></strong> de Noelia Lorenzo</li>
