--- a/index.html
+++ b/index.html
@@ -40,16 +40,36 @@
         <div class="col2"><a href="https://arillatype.studio/font/at-slam-cnd"><img src="assets/AtSlamCnd.svg"></a></div>
       </li>
       <li>
+        <div class="col1"><strong>Client: Huelva City</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/Onuba.svg"></div>
+      </li>
+      <li>
         <div class="col1"><strong>Font: At Geodesic</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-geodesic">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-geodesic"><img src="assets/AtGeodesic.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: LigaF</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/LigaF.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Larios</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/Larios.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Font: At Amiga</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-amiga">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-amiga"><img src="assets/AtAmiga.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: RTL Group</strong><br>Foundry: Arillatype + Atipo<br>Date: 2022<br>Link: <a href="https://arillatype.studio/rtl-group-font-expansion">Case-study</a></div>
+        <div class="col1"><strong>Client: Málaga City</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/MalagaSans.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: RTL Group</strong><br>Arillatype + Atipo<br>Date: 2022<br>Link: <a href="https://arillatype.studio/rtl-group-font-expansion">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/rtl-group-font-expansion"><img src="assets/RTLUnited.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Gallina Blanca</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/GallinaBlanca.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Font: At Aero</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-aero">Font details</a></div>
@@ -88,6 +108,10 @@
         <div class="col2"><a href="https://arillatype.studio/twenix-custom-typeface"><img src="assets/TwenixSans.svg"></a></div>
       </li>
       <li>
+        <div class="col1"><strong>Client: SM</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/SMPrimaria.svg"></div>
+      </li>
+      <li>
         <div class="col1"><strong>Client: EASD València</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/easd-valencia-custom-typeface">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/easd-valencia-custom-typeface"><img src="assets/EscolaSans.svg"></a></div>
       </li>
@@ -96,8 +120,16 @@
         <div class="col2"><a href="https://arillatype.studio/forty-creek-custom-typeface"><img src="assets/Niagara.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Ibercaja</strong><br>Foundry: Monotype<br>Date: 2020<br>Case-study: Unavailable</div>
+        <div class="col1"><strong>Client: Ibercaja</strong><br>Foundry: Monotype<br>Date: 2020</div>
         <div class="col2"><img src="assets/IbercajaSans.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Davis Cup</strong><br>Foundry: Monotype<br>Date: 2020</div>
+        <div class="col2"><img src="assets/DavisCup.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Macy’s</strong><br>Foundry: Monotype<br>Date: 2020</div>
+        <div class="col2"><img src="assets/MacysSans.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Font: FS Rosa</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging?rfsn=6624833.a9c515">Font details</a></div>
@@ -108,19 +140,27 @@
         <div class="col2"><a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging?rfsn=6624833.a9c515"><img src="assets/FSRenaissance.svg"></a></div>
       </li>
       <li>
+        <div class="col1"><strong>Client: Morillas</strong><br>Foundry: Fontsmith<br>Date: 2020</div>
+        <div class="col2"><img src="assets/MorillasSans.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Virgin</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
+        <div class="col2"><img src="assets/Virgin.svg"></div>
+      </li>
+      <li>
         <div class="col1"><strong>Font: SC Bunbury</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging?rfsn=6624833.a9c515">Font details</a></div>
         <div class="col2"><a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging?rfsn=6624833.a9c515"><img src="assets/SCBunbury.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: SC Duncan</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Info: Unreleased</a></div>
+        <div class="col1"><strong>Font: SC Duncan</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
         <div class="col2"><img src="assets/SCDuncan.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: SC Mogal</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Info: Unreleased</a></div>
+        <div class="col1"><strong>Font: SC Mogal</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
         <div class="col2"><img src="assets/SCMogal.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: SC Yorkton</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Info: Unreleased</a></div>
+        <div class="col1"><strong>Font: SC Yorkton</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
         <div class="col2"><img src="assets/SCYorkton.svg"></div>
       </li>
       <li>
@@ -136,8 +176,24 @@
         <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSCattle.svg"></a></div>
       </li>
       <li>
+        <div class="col1"><strong>Client: WPP</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
+        <div class="col2" id="amsteldok"><img src="assets/Amsteldok.gif"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Heineken</strong><br>Foundry: Fontsmith<br>Date: 2018</div>
+        <div class="col2"><img src="assets/Heineken18.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: MotoGP</strong><br>Foundry: Fontsmith<br>Date: 2018</div>
+        <div class="col2"><img src="assets/MotoGP.svg"></div>
+      </li>
+      <li>
         <div class="col1"><strong>Font: FS Neruda</strong><br>Foundry: Fontsmith<br>Date: 2018<br>Link: <a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith?rfsn=6624833.a9c515">Font details</a></div>
         <div class="col2"><a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSNeruda.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Zacapa</strong><br>Foundry: Fontsmith<br>Date: 2017</div>
+        <div class="col2"><img src="assets/Zacapa.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Font: Rock & Roll</strong><br>Foundry: pedroarilla<br>Date: 2017<br>Info: Unavailable</div>
