--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
       </p>
       2023:
       <ul>
+        <li>🎮 <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 2 hours</li>
         <li>🎮 <em><strong>It Takes Two</em></strong> on Playstation 5, 8 hours</li>
         <li>♻️ <em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 4 hours</li>
         <li>⏹️ <em><strong>OlliOlli World</em></strong> on Playstation 5, 4 hours</li>
