--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 2 hours</li>
+        <li>🎮 <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 4 hours</li>
         <li>🎮 <em><strong>It Takes Two</em></strong> on Playstation 5, 8 hours</li>
         <li>♻️ <em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 4 hours</li>
         <li>⏹️ <em><strong>OlliOlli World</em></strong> on Playstation 5, 4 hours</li>
@@ -550,6 +550,7 @@
     <div class="col2c" id="speaking">
       <p><strong>Speaking</strong></p>
       <ul>
+        <li><strong>Fonts & Branding.</strong> Órbitas, Jaén, Spain, 2023.</li>
         <li><strong>Fonts & Branding.</strong> Semana del Diseño, Granada, Spain, 2023.</li>
         <li><strong>Color fonts & At Amiga.</strong> Cañas y tipos, Palma de Mallorca, Spain, 2022.</li>
         <li><strong>Variable color fonts & Emojis</strong> [<a href="https://designmattersplus.io/talks/can-emojis-be-even-more-fun/">watch</a>] Design Matters, Copenhagen, Denmark, 2022.</li>
