--- a/index.html
+++ b/index.html
@@ -452,10 +452,11 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 4 hours</li>
         <li>🎮 <em><strong>It Takes Two</em></strong> on Playstation 5, 8 hours</li>
+        <li>🎮 <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 3 hours</li>
+        <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
         <li>♻️ <em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 4 hours</li>
-        <li>⏹️ <em><strong>OlliOlli World</em></strong> on Playstation 5, 4 hours</li>
+        <li>⏹️ <em><strong>OlliOlli World</em></strong> on Playstation 5, 3 hours</li>
         <li>⏹️ <em><strong>Vampire Survivors</em></strong> on Steam, 11 hours</li>
         <li>✅ <em><strong>Bloodborne</em></strong> on Playstation 5, 20 hours</li>
       </ul>
