--- a/index.html
+++ b/index.html
@@ -196,15 +196,15 @@
         <div class="col2"><img src="assets/Zacapa.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: Rock & Roll</strong><br>Foundry: pedroarilla<br>Date: 2017<br>Info: Unavailable</div>
+        <div class="col1"><strong>Font: Rock & Roll</strong><br>Foundry: pedroarilla<br>Date: 2017</div>
         <div class="col2"><img src="assets/RockRoll.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: Mestre</strong><br>Foundry: pedroarilla<br>Date: 2016<br>Info: Unavailable</div>
+        <div class="col1"><strong>Font: Mestre</strong><br>Foundry: pedroarilla<br>Date: 2016</div>
         <div class="col2"><img src="assets/Mestre.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: Valentina</strong><br>Foundry: pedroarilla<br>Date: 2012<br>Info: Unavailable</div>
+        <div class="col1"><strong>Font: Valentina</strong><br>Foundry: pedroarilla<br>Date: 2012</div>
         <div class="col2"><img src="assets/Valentina.svg"></div>
       </li>
     </ul>
