--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <h2>Fonts</h2>
     <ul id="fonts">
       <li>
+        <div class="col1"><strong>Font: At Queen</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-queen">Font details</a></div>
+        <div class="col2"><a href="https://arillatype.studio/font/at-queen"><img src="assets/AtQueen.svg"></a></div>
+      </li>
+      <li>
         <div class="col1"><strong>Font: At King</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-king">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-king"><img src="assets/AtKing.svg"></a></div>
       </li>
