--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="col2"><img src="assets/LigaF.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Larios</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: Larios</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/larios-custom-typeface"></div>
         <div class="col2"><img src="assets/Larios.svg"></div>
       </li>
       <li>
@@ -72,7 +72,7 @@
         <div class="col2"><a href="https://arillatype.studio/rtl-group-font-expansion"><img src="assets/RTLUnited.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Gallina Blanca</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: Gallina Blanca</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/gallina-blanca-custom-typeface"></div>
         <div class="col2"><img src="assets/GallinaBlanca.svg"></div>
       </li>
       <li>
