--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="col2"><img src="assets/LigaF.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Larios</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/larios-custom-typeface"></div>
-        <div class="col2"><img src="assets/Larios.svg"></div>
+        <div class="col1"><strong>Client: Larios</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/larios-custom-typeface">Case-study</a></div>
+        <div class="col2"><a href="https://arillatype.studio/larios-custom-typeface"><img src="assets/Larios.svg"></a></div>
       </li>
       <li>
         <div class="col1"><strong>Font: At Amiga</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-amiga">Font details</a></div>
@@ -72,8 +72,8 @@
         <div class="col2"><a href="https://arillatype.studio/rtl-group-font-expansion"><img src="assets/RTLUnited.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Gallina Blanca</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/gallina-blanca-custom-typeface"></div>
-        <div class="col2"><img src="assets/GallinaBlanca.svg"></div>
+        <div class="col1"><strong>Client: Gallina Blanca</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/gallina-blanca-custom-typeface">Case-study</a></div>
+        <div class="col2"><a href="https://arillatype.studio/gallina-blanca-custom-typeface"><img src="assets/GallinaBlanca.svg"></a></div>
       </li>
       <li>
         <div class="col1"><strong>Font: At Aero</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-aero">Font details</a></div>
