--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
       <ul>
         <li>🥸 <em><strong>101 historias NBA</em></strong> de Gonzalo Vázquez</li>
         <li>🥸 <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
-        <li>🥸 <em><strong>Costo</em></strong> de Andros Lozano</li>
+        <li>🥸 <em><strong>Almáciga</em></strong> de María Sánchez</li>
+        <li>❤️ <em><strong>Costo</em></strong> de Andros Lozano</li>
         <li>✅ <em><strong>13 Rue del Percebe: Edición integral</em></strong> de Franciso Ibáñez</li>
         <li>✅ <em><strong>Conversaciones sobre la escritura</em></strong> de A. Callimeri y M. Vázquez Montalbán</li>
         <li>❤️ <em><strong>Memorias de un dibujante en pijama: El integral</em></strong> de Paco Roca</li>
@@ -454,7 +455,8 @@
       2023:
       <ul>
         <li>🎮 <em><strong>It Takes Two</em></strong> on Playstation 5, 8 hours</li>
-        <li>🎮 <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 30 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 4 hours</li>
+        <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 34 hours</li>
         <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
         <li>⏹️ <em><strong>Minecraft Dungeons</em></strong> on Playstation 5, 1 hour</li>
         <li>♻️ <em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 4 hours</li>
