--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
       <ul>
         <li>🥸 <em><strong>101 historias NBA</em></strong> de Gonzalo Vázquez</li>
         <li>🥸 <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
-        <li>🥸 <em><strong>Almáciga</em></strong> de María Sánchez</li>
+        <li>🥸 <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
+        <li>❤️ <em><strong>Later</em></strong> by Stephen King</li>
+        <li>✅ <em><strong>Almáciga</em></strong> de María Sánchez</li>
         <li>❤️ <em><strong>Costo</em></strong> de Andros Lozano</li>
         <li>✅ <em><strong>13 Rue del Percebe: Edición integral</em></strong> de Franciso Ibáñez</li>
         <li>✅ <em><strong>Conversaciones sobre la escritura</em></strong> de A. Callimeri y M. Vázquez Montalbán</li>
@@ -450,13 +452,13 @@
     </div>
     <div class="col2c" id="gaming">
       <strong>Gaming</strong>
-      <p>Notes: 🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / 💎 All trophies / ♻️ Replayed
+      <p>Notes: 🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / 💯 100% completed / ♻️ Replayed
       </p>
       2023:
       <ul>
         <li>🎮 <em><strong>It Takes Two</em></strong> on Playstation 5, 8 hours</li>
-        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 4 hours</li>
-        <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 34 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 12 hours</li>
+        <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
         <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
         <li>⏹️ <em><strong>Minecraft Dungeons</em></strong> on Playstation 5, 1 hour</li>
         <li>♻️ <em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 4 hours</li>
@@ -478,7 +480,7 @@
         <li>⏹️ <em><strong>Streets of Rage 4</em></strong> on Playstation 5, 4 hours</li>
         <li>⏹️ <em><strong>Fall Guys</em></strong> on Playstation 5, 10 hours</li>
         <li>⏹️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 2 hours</li>
-        <li>💎 <em><strong>Elden Ring</em></strong> on Playstation 5, 117 hours</li>
+        <li>💯 <em><strong>Elden Ring</em></strong> on Playstation 5, 117 hours</li>
         <li>⏹️ <em><strong>Cyberpunk 2077</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Death’s Door</em></strong> on Playstation 5, 16 hours</li>
         <li>⏹️ <em><strong>The Legend of Zelda: The Minish Cap</em></strong> on Game Boy Advance (emulated), 2 hours</li>
